manifests/portainer/edge-agent.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer-edge
---
apiVersion: v1
kind: Service
metadata:
  name: s-portainer-agent-headless
  namespace: portainer-edge
spec:
  clusterIP: None
  selector:
    app: portainer-edge-agent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer-edge-agent
  namespace: portainer-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer-edge-agent
  template:
    metadata:
      labels:
        app: portainer-edge-agent
    spec:
      serviceAccountName: portainer-edge-agent
      containers:
      - name: agent
        image: portainer/agent:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9001
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
