manifests/portainer/agent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-agent-ingress
  namespace: portainer
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - agent.k3d.local
  rules:
  - host: agent.k3d.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer-agent
            port:
              number: 9001
